# agrossuite

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMake.vars.Linux  CMake.vars.Windows  CMake.vars.example.Linux  CMake.vars.example.Windows  CMakeLists.txt  CMakeQt.cmake  CMakeTests.cmake  CTestConfig.cmake  INSTALL  INSTALL.md  IncludeSubdirs.cmake  MANIFEST.in  QtHandling.cmake  README  README-WIN.txt  README-WIN64.txt  agros.iss  agros2d-debug.iss  agros2d-release.iss  agros2d.iss  agros2d.pro  agros2d.sh  build_deal.bat  build_deal.sh  compile_agros.ps1  deploy.sh  run_tests.sh  setup.py  setup.sh  tests.sh  tools.py
agros-generator/: CMakeLists.txt  generator.cpp  generator.h  generator_coupling.cpp  generator_coupling.h  generator_documentation.cpp  generator_module.cpp  generator_module.h  generator_postprocessor.cpp  generator_weakforms.cpp  main.cpp  parser.cpp  parser_instance.cpp  parser_instance.h  parser_lexical_analyser.cpp  parser_module_info.cpp  parser_module_info.h
agros-gui/: CMakeLists.txt  main.cpp  qrc_resources.cpp
agros-gui/app/: chartdialog.cpp  chartdialog.h  confdialog.cpp  confdialog.h  examplesdialog.cpp  examplesdialog.h  mainwindow.cpp  mainwindow.h  materialbrowserdialog.cpp  materialbrowserdialog.h  postprocessorview.cpp  postprocessorview.h  postprocessorview_chart.cpp  postprocessorview_chart.h  postprocessorview_mesh.cpp  postprocessorview_mesh.h  postprocessorview_particletracing.h  postprocessorview_post2d.cpp  postprocessorview_post2d.h  postprocessorview_post3d.cpp  preprocessorview.cpp  preprocessorview.h  scenebasicselectdialog.cpp  scenegeometrydialog.cpp  scenegeometrydialog.h  scenemarkerdialog.cpp  scenemarkerdialog.h  scenemarkerselectdialog.cpp  scenetransformdialog.cpp  scenetransformdialog.h  sceneview_common.cpp  sceneview_common.h  sceneview_common2d.cpp  sceneview_common2d.h  sceneview_common3d.cpp  sceneview_common3d.h  sceneview_geometry.cpp  sceneview_geometry.h  sceneview_geometry_simple.cpp  sceneview_geometry_simple.h  (+18 more)
agros-gui/gui/: about.cpp  about.h  chart.cpp  chart.h  checkversion.cpp  checkversion.h  common.cpp  common.h  fielddialog.cpp  fielddialog.h  functiondialog.cpp  functiondialog.h  groupbox.cpp  htmledit.cpp  infowidget.cpp  infowidget.h  lineeditdouble.h  logwidget.cpp  logwidget.h  other.cpp  other.h  parameterdialog.cpp  parameterdialog.h  physicalfield.cpp  physicalfield.h  problemdialog.cpp  problemdialog.h  recipedialog.cpp  recipedialog.h  resultsview.cpp  resultsview.h  scenewidget.cpp  scenewidget.h  slidervalue.cpp  slidervalue.h  systemoutput.h  valuedatatabledialog.cpp  valuedatatabledialog.h  valuelineedit.cpp  valuetimedialog.cpp  (+1 more)
agros-gui/optilab/: optilab.cpp  optilab.h  optilab_study.cpp  optilab_study.h  optilab_widget.cpp  optilab_widget.h  study_dialog.cpp  study_dialog.h  study_methoddialog.cpp  study_methoddialog.h
agros-library/: CMakeLists.txt  datatable.cpp  datatable.h  logview.cpp  logview.h  scene.cpp  scene.h  scenebasic.h  sceneedge.cpp  sceneedge.h  scenelabel.cpp  scenelabel.h  scenemarker.cpp  scenemarker.h  scenenode.cpp  scenenode.h  value.cpp  value.h
agros-python/: CMakeLists.txt  extension.cpp
agros-solver/: CMakeLists.txt  main.cpp
agros-swig/: CMakeLists.txt  agros.i
agros-swig/java/: test.sh  (+2 more)
agros2d-generator/: CMakeLists.txt  generator.cpp  generator.h  generator_coupling.cpp  generator_coupling.h  generator_documentation.cpp  generator_module.cpp  generator_module.h  generator_postprocessor.cpp  generator_weakforms.cpp  main.cpp  parser_instance.cpp  parser_lexical_analyser.cpp  parser_module_info.cpp  parser_module_info.h
agros2d-library/: CMakeLists.txt  chartdialog.cpp  chartdialog.h  confdialog.cpp  confdialog.h  datatable.h  examplesdialog.cpp  examplesdialog.h  infowidget.cpp  infowidget.h  logview.cpp  logview.h  mainwindow.cpp  mainwindow.h  materialbrowserdialog.cpp  meshgenerator_triangle.cpp  moduledialog.cpp  postprocessorview.cpp  postprocessorview.h  postprocessorview_chart.cpp  postprocessorview_chart.h  postprocessorview_mesh.cpp  postprocessorview_mesh.h  postprocessorview_particletracing.cpp  postprocessorview_particletracing.h  postprocessorview_post2d.cpp  postprocessorview_post2d.h  postprocessorview_post3d.cpp  postprocessorview_post3d.h  preprocessorview.cpp  preprocessorview.h  problemdialog.cpp  problemdialog.h  resultsview.cpp  resultsview.h  scene.cpp  scene.h  scenebasic.cpp  scenebasic.h  scenebasicselectdialog.cpp  (+40 more)
agros2d-python/: CMakeLists.txt  extension.cpp
agros2d-solver/: CMakeLists.txt  agros_solver.cpp  agros_solver.h  main.cpp
grid/: CMakeLists.txt  agros_grid_automoc.cpp  browser.cpp  browser.h  connection.cpp  connection.h  main.cpp  moc_browser.cpp  moc_connection.cpp
optilab-binary/: CMakeLists.txt  main.cpp  optilab.cpp  optilab.h  optilab_analyses.cpp  optilab_analyses.h  optilab_binary.cbp  optilab_binary_automoc.cpp  optilab_solver.cpp  optilab_solver.h  optilab_variants.cpp  optilab_variants.h
pythonlab-gui/: CMakeLists.txt  main.cpp  pythonbrowser.cpp  pythonbrowser.h  pythonconsole.cpp  pythoneditor.cpp  pythoneditor.h  pythonengine.cpp  pythonengine.h  pythonhighlighter.cpp  pythonlabutil.h  pythonlabwindow.cpp  pythonlabwindow.h
solver-external-mumps/: CMakeLists.txt  CTestConfig.cmake  main.cpp
solver-external-paralution/: CMakeLists.txt  CTestConfig.cmake  main.cpp
solver-external-petsc/: CMakeLists.txt  CTestConfig.cmake  main.cpp  main_mpi.cpp  main_seq.cpp
solver-external-trilinos/: CMakeLists.txt  CTestConfig.cmake  main.cpp
solver-external-umfpack/: CMakeLists.txt  CTestConfig.cmake  main.cpp
solver-external-viennacl/: CMakeLists.txt  CTestConfig.cmake  main.cpp
solver-plugin-amgcl/: CMakeLists.txt  main.cpp
solver-plugin-eigen/: CMakeLists.txt  main.cpp
solver-plugin-external/: CMakeLists.txt  main.cpp
solver-plugin-mumps/: CMakeLists.txt  main.cpp
solver-plugin-petsc/: CMakeLists.txt  main.cpp
solver-plugin-umfpack/: CMakeLists.txt  main.cpp
util/: CMakeLists.txt  config.h.cmake  exprtk.hpp  solver_export_matlab.cpp  sparse_io.h  util.cpp  util.h
(+1294 files in other folders)
